--- a/java/pom.xml
+++ b/java/pom.xml
@@ -22,6 +22,17 @@
                     <target>11</target>
                 </configuration>
             </plugin>
+             <plugin>
+                      <groupId>org.apache.maven.plugins</groupId>
+                      <artifactId>maven-jar-plugin</artifactId>
+                      <configuration>
+                          <archive>
+                              <manifestEntries>
+                                  <Automatic-Module-Name>com.threedimensionalloadingcvrp.validator</Automatic-Module-Name>
+                              </manifestEntries>
+                          </archive>
+                      </configuration>
+             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
